# compta

./: .gitignore  Cargo.toml  data.csv
src/: extract.rs  line.rs  main.rs
src/app/: categories.rs  effect.rs  home.rs  lines.rs  mod.rs  recurring.rs  sub_categories.rs
