[package]
name = "compta"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "*", features = ["all_loaders"] }
egui-file-dialog = "0.9.0"
derive_more = { version = "2.0.1", features = ["deref", "from", "from_str", "into_iterator", "display", "constructor"] }
thiserror = "2.0.12"
bon = "3.5.1"
egui_dock = "0.16.0"
itertools = "0.14.0"
clap = { version = "4.5.50", features = ["derive"] }
